# julia-set-visualisation

./: .gitignore  CMakeLists.txt  README.md  bitmap.c  bitmap.cpp  bitmap.h  main.c  main.cpp
